log
Thu 16 May 2024 09:15:42 PM UTC: 
 tests:  0|5
total_score: 0/70
3a35f91
Thu 16 May 2024 09:25:53 PM UTC: 
 sudoku.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
f5dfe8d
Thu 16 May 2024 09:33:45 PM UTC: 
 sudoku.c | 52 ++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 50 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
At top level:
sudoku.c:47:8: error: ‘is_valid’ defined but not used [-Werror=unused-function]
   47 |    int is_valid(Node* n){
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cef73d6
Thu 16 May 2024 09:34:18 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
93152ac
Thu 16 May 2024 09:34:42 PM UTC: 
 sudoku.c | 50 +-------------------------------------------------
 1 file changed, 1 insertion(+), 49 deletions(-)
 tests:  2|4
total_score: 15/70
eb49183
Thu 16 May 2024 09:43:59 PM UTC: 
 sudoku.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:59:59: error: expected ‘]’ before ‘)’ token
   59 |          if (n->sudo[i][j] != 0 && col_check[n->sudo[i][j]){
      |                                                           ^
      |                                                           ]
sudoku.c:70:33: error: ‘col_check’ undeclared (first use in this function)
   70 |       if (n->sudo[i][j] != 0 && col_check[n->sudo[i][j]){
      |                                 ^~~~~~~~~
sudoku.c:70:33: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:70:56: error: expected ‘]’ before ‘)’ token
   70 |       if (n->sudo[i][j] != 0 && col_check[n->sudo[i][j]){
      |                                                        ^
      |                                                        ]
sudoku.c:74:1: error: control reaches end of non-void function [-Werror=return-type]
   74 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
07e02ae
Thu 16 May 2024 09:47:36 PM UTC: 
 sudoku.c | 18 ++++++++++++------
 1 file changed, 12 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:68:37: error: expected statement before ‘)’ token
   68 |       for (int j = 0; j < 9; j += 3)){
      |                                     ^
sudoku.c:68:7: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   68 |       for (int j = 0; j < 9; j += 3)){
      |       ^~~
sudoku.c:68:38: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   68 |       for (int j = 0; j < 9; j += 3)){
      |                                      ^
sudoku.c:71:26: error: ‘j’ undeclared (first use in this function)
   71 |             for (int l = j; l < j + 3; l++){
      |                          ^
sudoku.c:71:26: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
e9ec03c
